--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>GitNotes // ZENITH</title>
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#030303" />
+    <link rel="apple-touch-icon" href="/gitnotes.png" />
     
     <!-- Analytics -->
     <script defer src="https://cloud.umami.is/script.js" data-website-id="8b7793a1-6800-4c47-a5a7-b46233f5c989"></script>
