--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "react-syntax-highlighter/": "https://esm.sh/react-syntax-highlighter@^16.1.0/",
     "react-syntax-highlighter": "https://esm.sh/react-syntax-highlighter@^16.1.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.90.0"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.90.0",
+    "turndown": "https://esm.sh/turndown@7.1.3",
+    "turndown-plugin-gfm": "https://esm.sh/turndown-plugin-gfm@1.0.2"
   }
 }
 </script>
