--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     "react-syntax-highlighter/": "https://esm.sh/react-syntax-highlighter@^16.1.0/",
     "react-syntax-highlighter": "https://esm.sh/react-syntax-highlighter@^16.1.0",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.90.0",
-    "turndown": "https://esm.sh/turndown@7.1.3",
-    "turndown-plugin-gfm": "https://esm.sh/turndown-plugin-gfm@1.0.2"
+    "turndown": "https://esm.sh/turndown@^7.2.2",
+    "turndown-plugin-gfm": "https://esm.sh/turndown-plugin-gfm@^1.0.2"
   }
 }
 </script>
