--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@
   <script type="importmap">
 {
   "imports": {
+    "turndown": "https://esm.sh/turndown@^7.2.2",
+    "turndown-plugin-gfm": "https://esm.sh/turndown-plugin-gfm@^1.0.2",
+    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
+    "uuid": "https://esm.sh/uuid@^13.0.0",
     "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
     "remark-gfm": "https://esm.sh/remark-gfm@^4.0.1",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
-    "uuid": "https://esm.sh/uuid@^13.0.0",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.90.1",
     "react-syntax-highlighter/": "https://esm.sh/react-syntax-highlighter@^16.1.0/",
-    "react-syntax-highlighter": "https://esm.sh/react-syntax-highlighter@^16.1.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.90.0",
-    "turndown": "https://esm.sh/turndown@^7.2.2",
-    "turndown-plugin-gfm": "https://esm.sh/turndown-plugin-gfm@^1.0.2"
+    "react-syntax-highlighter": "https://esm.sh/react-syntax-highlighter@^16.1.0"
   }
 }
 </script>
