feat: Add favicon and app icon
Includes a favicon and Apple Touch icon to visually represent GitNotes in browser tabs and on home screens.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>GitNotes // ZENITH</title>
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#030303" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/gitnotes.png" />
     <link rel="apple-touch-icon" href="/gitnotes.png" />
     
     <!-- Analytics -->
