feat: Update typography and fonts
Introduces new fonts (Syne, Eras itc, Noto Sans, Raleway) and adjusts font sizes for better readability and visual appeal. Updates Tailwind CSS configuration to include these fonts and imports them via Google Fonts.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
               }
             },
             fontFamily: {
-              sans: ['Inter', 'system-ui', 'sans-serif'],
-              mono: ['JetBrains Mono', 'IBM Plex Mono', 'monospace'],
+              sans: ['Syne', 'Inter', 'system-ui', 'sans-serif'],
+              mono: ['Eras itc', 'Syne', 'JetBrains Mono', 'IBM Plex Mono', 'monospace'],
             },
             letterSpacing: {
               tighter: '-0.05em',
@@ -47,7 +47,7 @@
       }
     </script>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=JetBrains+Mono:wght@400;500&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Syne:wght@400..800&display=swap');
 
       :root {
         /* Default: International Orange #FF4D00 */
