feat: Improve graph visualization and toolbar functionality
- Refactored the graph visualization component to use custom edge styling, including hover effects and a delete button.
- Implemented dynamic coloring for nodes based on cluster palettes to enhance visual distinction.
- Updated the editor toolbar to include tooltips with labels and shortcuts, improving user experience.
- Added logic to prevent duplicate links when connecting nodes and to safely remove links from file content.
- Introduced a new `react-dom` dependency for potential future rendering enhancements.
- Updated initial repository data with new names and descriptions reflecting a knowledge graph structure.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
     "react-syntax-highlighter": "https://esm.sh/react-syntax-highlighter@^16.1.0",
     "dagre": "https://esm.sh/dagre@^0.8.5",
     "@xyflow/react/": "https://esm.sh/@xyflow/react@^12.10.0/",
-    "@xyflow/react": "https://esm.sh/@xyflow/react@^12.10.0"
+    "@xyflow/react": "https://esm.sh/@xyflow/react@^12.10.0",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3"
   }
 }
 </script>
